--- a/Scripts/(1) Introducción a Python.ipynb
+++ b/Scripts/(1) Introducción a Python.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "'\\nEn este  caso estamos \\nUtilizando varias líneas de comentario\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Uso de markdown en Jupyter"
+    "### Uso de markdown en Jupyter"
    ]
   },
   {
@@ -141,10 +141,347 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dia = 2.3\n",
+    "print(Dia)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Tipos de datos primitivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Dia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tipos de secuencias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(\"hola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Edades = [20,21,16,27]\n",
+    "         #1  2   3  4 \n",
+    "         #0  1   2  3\n",
+    "         #-4 -3  -2 -1\n",
+    "Nombre = [\"Juan\", \"Sofía\",\"Camilo\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Edades[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Edades[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Edades.append(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 21, 16, 27]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Edades)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del Edades[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Juan', 'Sofía', 'Camilo', ['Benavides', 'Moreno', 'Mario']]\n",
+      "['Benavides', 'Moreno', 'Mario']\n",
+      "Moreno\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unir listas \n",
+    "nombres_estudiantes = [\"Juan\", \"Sofía\",\"Camilo\"]\n",
+    "nombres_profesores = [\"Benavides\", \"Moreno\",\"Mario\"]\n",
+    "\n",
+    "nombres_estudiantes.append(nombres_profesores)\n",
+    "print(nombres_estudiantes)\n",
+    "\n",
+    "# Extraer el nombre Moreno\n",
+    "print(nombres_estudiantes[3])\n",
+    "print(nombres_estudiantes[3][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Juan', 'Sofía', 'Camilo', 'Benavides', 'Moreno', 'Mario']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombres_estudiantes2 = [\"Juan\", \"Sofía\",\"Camilo\"]\n",
+    "nombres_profesores2 = [\"Benavides\", \"Moreno\",\"Mario\"]\n",
+    "\n",
+    "nombres_estudiantes2.extend(nombres_profesores2)\n",
+    "print(nombres_estudiantes2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tuplas**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 4, 5, 6, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros = (2,3,4,5,6,7)\n",
+    "print(numeros)\n",
+    "type(numeros)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Diccionarios**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juan\n"
+     ]
+    }
+   ],
+   "source": [
+    "Datos = {\"Nombre\":[\"Juan\",\"Luis\"], \"Apellido\":[\"Acevedo\",\"Gómez\"]}\n",
+    "print(Datos[\"Nombre\"][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Juan': 12, 'Luis': 13, 'Camila': 15, 'Luisa': 15, 'John': 63}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = dict(zip([\"Juan\",\"Luis\",\"Camila\",\"Luisa\",\"John\"], [12,13,15,15,63]))\n",
+    "print(dic)\n",
+    "\n",
+    "############################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Podemos agregar cualquier tipo de secuencia\n",
+    "tupla = (1,2,3,4,5)\n",
+    "tupla2 = (\"a\",\"b\",\"c\",\"d\",\"e\")\n",
+    "\n",
+    "diccionario_tuplas={\"Números\":______, \"Letras\":______}\n",
+    "print(diccionario_tuplas)\n",
+    "\n",
+    "# Si quiero imprimir el número 3\n",
+    "diccionario_tuplas__________"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "puertos = {80: \"HTTP\", 23: \"SMTP\", 443: \"HTTPS\"}\n",
+    "print(puertos)\n",
+    "# Con el [clave] puedo modificar o crear \n",
+    "puertos[23] =\n",
+    "print(puertos)\n",
+    "puertos[110] =\n",
+    "print(puertos)"
    ]
   },
   {
@@ -275,140 +612,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tipos de secuencias"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Listas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Juan', 'Camila', 'Sofia', ['Benavides', 'Moreno', 'Mario']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Se pueden unir las listas\n",
-    "\n",
-    "nombres_estudiantes = [\"Juan\", \"Camila\", \"Sofia\"]\n",
-    "nombres_profesores = [\"Benavides\", \"Moreno\", \"Mario\"]\n",
-    "\n",
-    "nombres_estudiantes.______(nombres_profesores)\n",
-    "print(nombres_estudiantes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Benavides', 'Moreno', 'Mario']\n",
-      "Mario\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Si quisiera extraer el nombre del profesor Moreno no sirve\n",
-    "print(nombres_estudiantes___)\n",
-    "# Recuerden que es 3 porque la indexación inicia desde 0\n",
-    "print(nombres_estudiantes_______)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Tuplas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Diccionario"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Números': (1, 2, 3, 4, 5), 'Letras': ('a', 'b', 'c', 'd', 'e')}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Podemos agregar cualquier tipo de secuencia\n",
-    "tupla = (1,2,3,4,5)\n",
-    "tupla2 = (\"a\",\"b\",\"c\",\"d\",\"e\")\n",
-    "\n",
-    "diccionario_tuplas={\"Números\":______, \"Letras\":______}\n",
-    "print(diccionario_tuplas)\n",
-    "\n",
-    "# Si quiero imprimir el número 3, preguntar a alguien\n",
-    "diccionario_tuplas__________"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{80: 'HTTP', 23: 'SMTP', 443: 'HTTPS'}\n",
-      "{80: 'HTTP', 23: 'Telnet', 443: 'HTTPS'}\n",
-      "{80: 'HTTP', 23: 'Telnet', 443: 'HTTPS', 110: 'POP'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "puertos = {80: \"HTTP\", 23: \"SMTP\", 443: \"HTTPS\"}\n",
-    "print(puertos)\n",
-    "# Con el [clave] puedo modificar o crear \n",
-    "puertos[23] =\n",
-    "print(puertos)\n",
-    "puertos[110] =\n",
-    "print(puertos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Primer análisis de datos "
    ]
   },
@@ -448,23 +651,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sns' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-fd1f66b7db13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m plot = sns.pairplot(data, plot_kws = {_________},\n\u001b[0m\u001b[0;32m      2\u001b[0m             diag_kws = {_________})\n\u001b[0;32m      3\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msuptitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_________\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0m_________\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_________\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots_adjust\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sns' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot = sns.pairplot(data, plot_kws = {_________},\n",
     "            diag_kws = {_________})\n",
