--- a/Scripts/(1) Introducción a Python.ipynb
+++ b/Scripts/(1) Introducción a Python.ipynb
@@ -274,7 +274,7 @@
    "source": [
     "import _______\n",
     "\n",
-    "def _______(_): # radio es el argumento que requiere mi función como entrada\n",
+    "def _______(_):\n",
     "    _________\n",
     "    return _____"
    ]
