--- a/Scripts/(1) Introducción a Python.ipynb
+++ b/Scripts/(1) Introducción a Python.ipynb
@@ -244,7 +244,7 @@
     "\n",
     "Python soporta los operadores aritméticos básicos tales como:\n",
     "- +: Adición\n",
-    "- -: Substracción\n",
+    "- -: Sustracción\n",
     "- *: Multiplación\n",
     "- /: División\n",
     "- **: Potenciación\n",
@@ -419,12 +419,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "452.3904"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def area_circulo(radio):\n",
+    "    area = 3.1416 * radio ** 2\n",
+    "    return area\n",
+    "\n",
+    "area_circulo(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _______(_):\n",
-    "    return __________"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "452.3893421169302"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def area_circulo(radio):\n",
+    "    area = math.pi * radio ** 2\n",
+    "    return area\n",
+    "\n",
+    "area_circulo(12)"
    ]
   },
   {
@@ -432,25 +481,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import _______\n",
-    "\n",
-    "def _______(_):\n",
-    "    _________\n",
-    "    return _____"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escriba el radio del círculo: 13\n",
+      "El área del círculo es:  530.929158456675\n"
+     ]
+    }
+   ],
    "source": [
-    "radio = ________\n",
+    "radio = int(input(\"Escriba el radio del círculo: \"))\n",
     "\n",
-    "___________\n",
-    "\n",
-    "print(\"El área del círculo es: \",  _______(_))"
+    "print(\"El área del círculo es: \",  area_circulo(radio))"
    ]
   },
   {
