--- a/Scripts/(1) Introducción a Python.ipynb
+++ b/Scripts/(1) Introducción a Python.ipynb
@@ -4,30 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Introducción a Python**"
+    "### Introducción a Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algunas veces el nootbook no se guarda automáticamente, en caso de que sea así, ejecuten %autosave n, donde n es la cantidad de segundos. Hola amigos.\n",
+    "Algunas veces el nootbook no se guarda automáticamente, en caso de que sea así, ejecuten %autosave n, donde n es la cantidad de segundos. Hola amigos. \n",
+    "\n",
+    "Saludos\n",
     "\n",
     "Si queremos comentar una línea de código se utiliza el # o \"\"\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(120000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 120 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "%autosave 120\n",
-    "\n",
-    "# Esto es un comentario\n",
-    "\n",
-    "# Esto en un comentario\n",
-    "# asdfasdfasdfa sdfasdfa sdfasdf\n"
+    "%autosave 120 \n",
+    "# Función para guardar automáticamente"
    ]
   },
   {
@@ -116,12 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El día es: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "Dia = 3\n",
-    "print(\"El día es:\", Dia)"
+    "dia = 3\n",
+    "print(\"El día es:\", dia)"
    ]
   },
   {
@@ -133,10 +156,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable   Type    Data/Info\n",
+      "----------------------------\n",
+      "dia        int     3\n"
+     ]
+    }
+   ],
+   "source": [
+    "%whos"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,10 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+5*(3*2)**2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,10 +255,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = x + 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x -= 5 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 != 2.5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,16 +371,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Cuántos años tienes? 19\n",
+      "¿Cuál es su sexo?:M\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = int(input(\"¿Cuántos años tienes? \"))\n",
+    "sexo = input(\"¿Cuál es su sexo?:\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edad > 18 or not sexo == \"M\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(True and False)\n",
     "print(True or False)\n",
@@ -263,25 +438,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _______(_):\n",
-    "    return __________"
+    "def area_circulo(r):\n",
+    "    return 3.1416*r**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153.9384"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import _______\n",
+    "area_circulo(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153.93804002589985"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
     "\n",
-    "def _______(_):\n",
-    "    _________\n",
-    "    return _____"
+    "def area_circulo_pi(r):\n",
+    "    area = math.pi * r ** 2\n",
+    "    return area\n",
+    "\n",
+    "area_circulo_pi(7)"
    ]
   },
   {
